{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Player Movement",
            "id": "bdd75272-0f2f-4cc4-b760-7cc500480391",
            "actions": [
                {
                    "name": "Movement",
                    "type": "PassThrough",
                    "id": "067c8338-d5e0-447c-9c38-77ba46a3bfbd",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Camera",
                    "type": "PassThrough",
                    "id": "43cfc644-e928-4ff6-aa4c-2e55a42ff137",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "7a1a0b02-b39f-443f-a4b9-61e5f34040d7",
                    "path": "2DVector(mode=2)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "39ba58b5-5149-43fe-be04-62d2c27d9be8",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "6fedf27c-dbb3-4290-a7e3-591e186ffa88",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "60a319cb-91e4-4ece-900f-63836aba50f6",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "9b6550ed-fe89-4314-9fc2-20fd9c4017ef",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "b31c69a0-da8e-4809-8721-2962bce0c6ae",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Camera",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Player Actions",
            "id": "0f647c07-e457-4c5c-b323-9a89f9b16f7a",
            "actions": [
                {
                    "name": "Shift",
                    "type": "Button",
                    "id": "a4e5a3ac-f392-435d-9190-fa0cc5e11102",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "c9adbbac-95d2-4346-9ce2-2eebc18cb689",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Inventory",
                    "type": "Button",
                    "id": "d73262a6-c872-4b4c-8037-8fcd8d6bc5e3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Ctrl",
                    "type": "Button",
                    "id": "1747b603-5b5c-42f9-9fa1-30c64f4d5e35",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "2835b586-4bec-46e8-83b6-6d7a0b44ae35",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "LeftMouse",
                    "type": "Button",
                    "id": "c4d6f42c-d061-4dd6-a08c-0a81c33e9337",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RightMouse",
                    "type": "Button",
                    "id": "6b54359c-3b32-4aa5-819a-332eb542ec54",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MiddleMouse",
                    "type": "Button",
                    "id": "205baed6-83e2-4b7c-aef3-7f1ac8262a46",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "4cd17c90-07cc-4849-a3d5-6cee02cd6e87",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Shift",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0c7a48ad-078f-4bd7-a7b5-3d7c500b5ad4",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "66bbfcb0-94f7-4bc4-b7d7-35bedf6ce5dd",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftMouse",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "507fa2e5-cead-4bd0-8767-7805ee337452",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightMouse",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fad54df1-22cc-4514-b5c3-c428ed9df914",
                    "path": "<Keyboard>/leftCtrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Ctrl",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cc820a1f-7915-4e14-a09d-a2841b057bd4",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e593b34a-277e-4483-a520-9be7e86f093a",
                    "path": "<Keyboard>/i",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Inventory",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ceeec385-1e64-49e4-8144-6ee7ef89392c",
                    "path": "<Mouse>/middleButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MiddleMouse",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UI",
            "id": "7e7bb465-623f-49c9-9a88-115dc6778d06",
            "actions": [
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "99992af1-b8a6-4fe5-be6a-16d5bc6e846b",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "f8b2937b-52a7-48d9-a23e-66faccb54937",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}